# attention-meets-perturbation

./: .allennlp_plugins  404.html  CITATION.cff  README.md  index.html  index.json  index.xml  manifest.webmanifest  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: gh-pages.yml
amep/: __init__.py
amep/commands/: __init__.py
amep/commands/make_dataset/: sub_command.py  util.py
amep/common/: subset_metrics.py  util.py
amep/const/: __init__.py  dataset.py
amep/data/dataset_readers/: __init__.py
amep/data/tokenizers/: __init__.py  whitespace_tokenizer_with_vocab_filter.py
amep/models/: __init__.py
amep/models/bc/: __init__.py  at_advt.py  weighted.py
amep/models/qa/: __init__.py  vanilla.py
amep/modules/: __init__.py
amep/modules/attention_layer/: __init__.py  base.py
amep/nn/: util.py
author/nelson-bighetti/: index.html  index.xml
author/shunsuke-kitada/: index.html  index.xml
authors/: index.html  index.xml
authors/page/1/: index.html
categories/: index.html  index.xml
config/: base_bc.jsonnet  base_qa.jsonnet
config/ag_news/: train.jsonnet
config/cnn/: train.jsonnet
config/imdb/: train.jsonnet
config/newsgroups/: train.jsonnet
config/sst/: train.jsonnet
css/: academic.css
dataset/ag_news/: README.md
dataset/cnn/: README.md
dataset/imdb/: README.md
dataset/multi_nli/: README.md
dataset/newsgroups/: README.md
dataset/snli/: README.md
dataset/sst/: README.md
media/: attention_gradient_vanilla.html  attention_models.html
publication_types/: index.html  index.xml
tags/: index.html  index.xml
(+44 files in other folders)
