[tool.poetry]
name = "attention-meets-perturbation"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
allennlp = "^1.1.0"
pandas = "^1.1.2"
rootpath = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.5.1"
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
